--- a/frontend/buggmodel/package.json
+++ b/frontend/buggmodel/package.json
@@ -6,21 +6,27 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "pipe": "next build && jest && next start",
+    "test": "jest"
   },
   "dependencies": {
     "@react-three/cannon": "^6.6.0",
     "@react-three/fiber": "^8.15.16",
     "client-zip": "^2.4.4",
     "next": "14.1.3",
+    "node": "^21.7.1",
     "openbim-components": "^1.4.3",
     "react": "^18",
     "react-dom": "^18",
     "three": "^0.160.1",
     "three-stdlib": "^2.29.4",
+    "ts-node": "^10.9.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -30,6 +36,8 @@
     "bim-fragment": "1.4.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lil-gui": "^0.19.1",
     "postcss": "^8",
     "stats.js": "^0.17.0",
