--- a/frontend/buggmodel/package.json
+++ b/frontend/buggmodel/package.json
@@ -27,7 +27,7 @@
     "@types/three": "0.160.0",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
-    "bim-fragment": "1.4.0",
+    "bim-fragment": "^1.4.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "lil-gui": "^0.19.1",
