--- a/frontend/buggmodel/package.json
+++ b/frontend/buggmodel/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@react-three/cannon": "^6.6.0",
     "@react-three/fiber": "^8.15.16",
+    "@types/react-google-recaptcha": "^2.1.9",
+    "axios": "^1.6.7",
     "client-zip": "^2.4.4",
     "next": "14.1.3",
     "openbim-components": "^1.4.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-google-recaptcha": "^3.1.0",
     "three": "^0.160.1",
     "three-stdlib": "^2.29.4",
     "uuid": "^9.0.1"
