--- a/frontend/buggmodel/package.json
+++ b/frontend/buggmodel/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
+    
   },
   "dependencies": {
     "@react-three/cannon": "^6.6.0",
@@ -24,17 +26,25 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
+    "@babel/preset-react": "^7.23.3",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/three": "0.160.0",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
+    "babel-jest": "^29.7.0",
     "bim-fragment": "^1.4.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
+    "jest": "^29.7.0",
     "lil-gui": "^0.19.1",
     "postcss": "^8",
+    "react-test-renderer": "^18.2.0",
     "stats.js": "^0.17.0",
     "tailwindcss": "^3.3.0",
     "three": "^0.160.1",
